<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vslam_semantic</name>
  <version>0.1.0</version>
  <description>
    cuVSLAM + NanoOWL + Pixhawk IMU + Redis semantic graph builder
    targeted at the Intel RealSense D415 running on a Jetson.
  </description>
  <maintainer email="sharvesh@example.com">Sharvesh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- redis-py, transformers, torch2trt, nanoowl are pip-installed; not in rosdep -->

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
